[package]
name = "warp-cli"
version = "0.1.0"
authors = ["commonkestrel"]
edition = "2021"
license = "MIT"
repository = "https://github.com/commonkestrel/warp"
exclude = ["/examples"]

[dependencies]
async-std = "1.12.0"
clap = { version = "4.5.8", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
clio = { version = "0.3.5", features = ["clap-parse"] }
colored = "2.1.0"
git2 = "0.19.0"
lazy-regex = "3.1.0"
logos = "0.14.0"
