[package]
name = "warp-compiler"
version = "0.1.0"
authors = ["commonkestrel"]
edition = "2021"
license = "MIT"
repository = "https://github.com/commonkestrel/warp"
exclude = ["/examples"]

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "4.5.8", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
clio = { version = "0.3.5", features = ["clap-parse"] }
colored = "2.1.0"
git2 = "0.19.0"
home = "0.5.9"
lazy-regex = "3.1.0"
logos = "0.14.0"
oem_cp = "2.0.0"
slotmap = "1.0.7"
url = "2.5.2"

[[bin]]
name = "warp"
path = "src/main.rs"
